[package]
author = "HoloTheDrunk"
name = "field_iterator_derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro for field_iterator"
license = "MIT"
repository = "https://github.com/HoloTheDrunk/field_iterator"
readme = "README.md"
keywords = ["iterator", "proc-macro", "derive", "reflect", "reflection"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.58"
